--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-translate",
+  "name": "angular-translate-tp",
   "description": "A translation module for AngularJS",
   "version": "2.8.1",
   "main": "./angular-translate.js",
